add missing subtitulamos items

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ tvdb = "subliminal.refiners.tvdb:refine"
 addic7ed = "subliminal.converters.addic7ed:Addic7edConverter"
 opensubtitles = "subliminal.converters.opensubtitles:OpenSubtitlesConverter"
 opensubtitlescom = "subliminal.converters.opensubtitlescom:OpenSubtitlesComConverter"
+subtitulamos = "subliminal.converters.subtitulamos:SubtitulamosConverter"
 tvsubtitles = "subliminal.converters.tvsubtitles:TVsubtitlesConverter"
 
 [tool.setuptools]
