--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-# https://peps.python.org/pep-0517/
+# https://packaging.python.org/en/latest/specifications/pyproject-toml/
 [build-system]
 requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"
@@ -8,6 +8,7 @@ build-backend = "setuptools.build_meta"
 name = "subliminal"
 description = "Subtitles, faster than your thoughts"
 requires-python = ">=3.9"
+readme = "README.rst"
 license = { text = "MIT" }
 authors = [{ name = "Antoine Bertin", email = "diaoulael@gmail.com" }]
 maintainers = [
@@ -31,7 +32,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Multimedia :: Video",
 ]
-dynamic = ["version", "readme"]
+dynamic = ["version"]
 dependencies = [
     "babelfish>=0.6.1",
     "beautifulsoup4>=4.4.0",
@@ -115,6 +116,7 @@ tvdb = "subliminal.refiners.tvdb:refine"
 addic7ed = "subliminal.converters.addic7ed:Addic7edConverter"
 opensubtitles = "subliminal.converters.opensubtitles:OpenSubtitlesConverter"
 opensubtitlescom = "subliminal.converters.opensubtitlescom:OpenSubtitlesComConverter"
+subtitulamos = "subliminal.converters.subtitulamos:SubtitulamosConverter"
 tvsubtitles = "subliminal.converters.tvsubtitles:TVsubtitlesConverter"
 
 [tool.setuptools]
@@ -132,7 +134,6 @@ where = ["."]
 
 [tool.setuptools.dynamic]
 version = {attr = "subliminal.__version__"}
-readme = {file = ["README.rst", "HISTORY.rst"]}
 
 
 # https://docs.pytest.org/en/6.2.x/customize.html
@@ -166,7 +167,10 @@ omit = [
 ]
 
 [tool.coverage.paths]
-source = [".tox/py*/**/site-packages"]
+source = [
+    "subliminal",
+    "**/site-packages/subliminal",
+]
 
 [tool.coverage.run]
 source = ["subliminal"]
@@ -217,9 +221,6 @@ ignore = [
     "D107",   # Missing docstring in `__init__`
     "D401",   # First line should be in imperative mood
 ]
-
-[tool.ruff.lint.flake8-pytest-style]
-mark-parentheses = true
 
 [tool.ruff.lint.per-file-ignores]
 "docs/conf*.py" = ["ALL"]
