--- a/.github/workflows/scheduled-tests.yaml
+++ b/.github/workflows/scheduled-tests.yaml
@@ -1,27 +1,37 @@
-name: Test-APIs
+name: Scheduled Tests
 
 on:
   schedule:
     - cron: "12 12 12 * *" # run once a month on the 12th at 12:12
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  FORCE_COLOR: "1"
+  PIP_DISABLE_PIP_VERSION_CHECK: "1"
+  PIP_NO_PYTHON_VERSION_WARNING: "1"
+
 jobs:
   test-api:
-    name: Test APIs
-    if: github.repository == 'Diaoul/subliminal' && github.event_name == 'schedule'
+    name: Run tests with deleted requests cassettes
+    if: |
+      (github.repository == 'Diaoul/subliminal' && github.event_name == 'schedule')
+      || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
       - name: install
         run: |
-          python -m pip install -U pip
-          python -m pip install -e ".[test]"
+          python -Im pip install -U pip
+          python -Im pip install -e ".[tests]"
       - name: remove cassettes
         run: |
           rm -rf tests/cassettes
