--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ pass_env = SETUPTOOLS_SCM_PRETEND_VERSION
 [testenv]
 package = wheel
 wheel_build_env = .pkg
-extras = test
+extras = tests
 pass_env =
     COVERAGE_FILE
 allowlist_externals =
