--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,11 +62,8 @@ docs = [
     "sphinx_autodoc_typehints",
     "towncrier",
 ]
-test = [
+tests = [
     "coverage[toml]>=7",
-    "mypy",
-    "types-requests",
-    "types-beautifulsoup4",
     "pytest>=6.0",
     "pytest-cov",
     "pytest-xdist",
@@ -74,8 +71,13 @@ test = [
     "vcrpy>=5",
     "importlib_metadata>=4.6; python_version<'3.10'",
 ]
+types = [
+    "mypy",
+    "types-requests",
+    "types-beautifulsoup4",
+]
 dev = [
-    "pre-commit",
+    "pre-commit>=2.9.3",
     "doc8",
     "mypy",
     "ruff",
