add types dependency in mypy tox env

--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ commands = {[testenv:tests]commands}
 
 
 [testenv:mypy]
+extras = types
 commands = mypy --install-types --non-interactive {posargs:subliminal tests}
 
 
