add types dependency in mypy tox env

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,9 @@ commands = {[testenv:tests]commands}
 
 
 [testenv:mypy]
-extras = types
+extras =
+    types
+    tests
 commands = mypy --install-types --non-interactive {posargs:subliminal tests}
 
 
