move source to src

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,11 +79,6 @@ types = [
 ]
 dev = [
     "pre-commit>=2.9.3",
-    "doc8",
-    "mypy",
-    "ruff",
-    "typos",
-    "validate-pyproject",
     "tox",
 ]
 
@@ -133,7 +128,7 @@ subliminal = [
 
 [tool.setuptools.packages.find]
 namespaces = false
-where = ["."]
+where = ["src"]
 
 [tool.setuptools.dynamic]
 version = {attr = "subliminal.__version__"}
@@ -166,7 +161,7 @@ show_missing = true
 skip_covered = true
 fail_under = 80
 omit = [
-    "subliminal/cli.py",
+    "src/subliminal/cli.py",
 ]
 
 [tool.coverage.paths]
@@ -176,7 +171,7 @@ source = [
 ]
 
 [tool.coverage.run]
-source = ["subliminal"]
+source = ["src"]
 branch = true
 relative_files = true
 
@@ -184,7 +179,7 @@ relative_files = true
 # https://docs.astral.sh/ruff/
 [tool.ruff]
 line-length = 120
-src = ["subliminal", "tests"]
+src = ["src", "tests"]
 exclude = [
     "_version.py",
 ]
@@ -228,7 +223,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "docs/conf*.py" = ["ALL"]
-"subliminal/__init__.py" = ["E402"]
+"src/subliminal/__init__.py" = ["E402"]
 "tests/*.py" = ["D", "S", "RUF012", "ANN", "FBT"]
 
 # https://docs.astral.sh/ruff/formatter/
@@ -285,7 +280,7 @@ showcontent = false
 
 # https://mypy.readthedocs.io/en/stable/config_file.html
 [tool.mypy]
-files = "subliminal/**/*.py"
+files = "src/**/*.py"
 exclude = ['build', 'dist', 'docs']
 # global-only flags
 pretty = true
