--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands = {[testenv:tests]commands}
 extras =
     types
     tests
-commands = mypy --install-types --non-interactive {posargs:subliminal tests}
+commands = mypy --install-types --non-interactive {posargs:src tests}
 
 
 [testenv:coverage]
