--- a/tox.ini
+++ b/tox.ini
@@ -95,7 +95,7 @@ allowlist_externals = sphinx-build
 commands =
     sphinx-build -n -T -W --keep-going -b html -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -n -T -W --keep-going -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/html
-    ; sphinx-build -n -T -W --keep-going -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -n -T -W --keep-going -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
 
 
 [testenv:changelog]
