--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,8 @@ commands =
         -m core --cov=subliminal --cov-report= --cov-fail-under=0 \
         {posargs:-n auto}
     coverage report \
-        --omit='subliminal/cli.py,subliminal/converters/*,subliminal/providers/*,subliminal/refiners/*' \
+        --omit='src/subliminal/cli.py,src/subliminal/__main__.py,'\
+            'src/subliminal/converters/*,src/subliminal/providers/*,src/subliminal/refiners/*' \
         --skip-covered --show-missing --fail-under=100
 
 
