--- a/hatch.toml
+++ b/hatch.toml
@@ -104,7 +104,8 @@ run-cov-core = [
   "test-cov-core",
   """\
     coverage report --skip-covered --show-missing --fail-under=100 \
-    --omit='src/subliminal/cli.py,src/subliminal/converters/*,src/subliminal/providers/*,src/subliminal/refiners/*' \
+    --omit='src/subliminal/cli.py,src/subliminal/archives.py,src/subliminal/__main__.py,'\
+    'src/subliminal/converters/*,src/subliminal/providers/*,src/subliminal/refiners/*' \
   """,
 ]
 
