--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -144,6 +144,12 @@ jobs:
           with codecs.open(os.environ["GITHUB_ENV"], mode="a", encoding="utf-8") as file_handler:
               file_handler.write(f"FORCE_COLOR=1\nENV={py}\n")
         shell: python
+      - name: Install other test software (on Linux only)
+        if: matrix.os == 'ubuntu-latest'
+        uses: awalsh128/cache-apt-pkgs-action@v1
+        with:
+          packages: rar
+          version: 1.0
       - name: Setup test environment
         run: |
           hatch -v env create ${ENV}
