coverage: omit __main__.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,6 +150,7 @@ show_missing = true
 skip_covered = true
 fail_under = 80
 omit = [
+    "src/subliminal/__main__.py",
     "src/subliminal/cli.py",
 ]
 
