--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dependencies = [
 [project.optional-dependencies]
 rar = ["rarfile>=2.7"]
 docs = [
-    "sphinx",
+    "sphinx<8.2",
     "sphinx_rtd_theme>=2",
     "sphinxcontrib-programoutput",
     "sphinx_autodoc_typehints",
@@ -141,7 +141,8 @@ exclude_also = [
     "if TYPE_CHECKING:",
     "@overload",
     "except ImportError",
-    "\\.\\.\\.",
+    "except PackageNotFoundError",
+    "\\.\\.\\.^",
     "raise NotImplementedError()",
     "if __name__ == .__main__.:",
 ]
@@ -149,6 +150,7 @@ show_missing = true
 skip_covered = true
 fail_under = 80
 omit = [
+    "src/subliminal/__main__.py",
     "src/subliminal/cli.py",
 ]
 
