--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ types = [
     "mypy",
     "types-requests",
     "types-beautifulsoup4",
+    "types-decorator",
 ]
 dev = [
     "pre-commit>=2.9.3",
