add core coverage to CI actions

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -278,6 +278,7 @@ jobs:
 
       - name: Store coverage file
         uses: actions/upload-artifact@v4
+        if: ${{ failure() }}
         with:
           name: core-coverage
           path: .core-coverage
