disable core-coverage

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -234,6 +234,7 @@ jobs:
     name: Core Coverage
     runs-on: ubuntu-latest
     needs: build-package
+    if: false
     steps:
       - uses: actions/checkout@v4
         with:
