disable core-coverage

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -293,7 +293,7 @@ jobs:
 
     needs:
       - coverage
-      - core-coverage
+      # - core-coverage
       - docs
       - install-dev
       - typing
