--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -115,10 +115,34 @@ jobs:
       # packaging metadata (trove classifiers).
       supported-python-versions: ${{ steps.baipp.outputs.supported_python_classifiers_json_array }}
 
+  prepare-test:
+    name: Build & verify package
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+
+      - name: Install other test software (on Linux only)
+        uses: awalsh128/cache-apt-pkgs-action@v1
+        with:
+          packages: rar
+          version: 1.0
+
+      - name: Upload files for test
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ matrix.os }}-${{ matrix.py }}
+          path: .coverage*
+          include-hidden-files: true
+          if-no-files-found: error
+
   test:
     name: Test
     runs-on: ${{ matrix.os }}
-    needs: build-package
+    needs: [build-package, prepare-test]
     strategy:
       fail-fast: false
       matrix:
@@ -236,7 +260,7 @@ jobs:
   core-coverage:
     name: Core Coverage
     runs-on: ubuntu-latest
-    needs: build-package
+    needs: [build-package, prepare-test]
     if: false
     steps:
       - uses: actions/checkout@v4
@@ -248,12 +272,6 @@ jobs:
           python-version-file: .python-version-default
       - name: Install hatch
         run: python -Im pip install hatch
-
-      - name: Install other test software (on Linux only)
-        uses: awalsh128/cache-apt-pkgs-action@v1
-        with:
-          packages: rar
-          version: 1.0
 
       - name: Pick environment to run
         env:
