--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,16 @@ commands =
     false
 
 
+[testenv:prepare-tests]
+description = download data for tests
+basepython = python3
+usedevelop = True
+passenv = *
+deps =
+    requests
+commands = python scripts/prepare_tests.py {posargs}
+
+
 [testenv:tests]
 commands = pytest {posargs:-n auto}
 
