--- a/tox.ini
+++ b/tox.ini
@@ -50,7 +50,7 @@ commands = {[testenv:tests]commands}
 extras =
     types
     tests
-commands = mypy --install-types --non-interactive {posargs:src tests}
+commands = mypy --install-types --non-interactive {posargs:src tests scripts}
 
 
 [testenv:coverage]
