delete test-data artifact ASAP to reduce storage

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -149,6 +149,8 @@ jobs:
           path: tests/data/
           include-hidden-files: false
           if-no-files-found: error
+          # heavy artifact should be deleted asap
+          retention-days: 1
 
   test:
     name: Test
