--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -297,6 +297,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: tests-data
+          path: tests/data/
           merge-multiple: true
       - name: Install hatch
         run: python -Im pip install hatch
