switch from tomli to tomlkit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
     "requests>=2.0",
     "srt>=3.5",
     "stevedore>=3.0",
-    "tomli>=2",
+    "tomlkit>=0.13.2",
 ]
 
 # extras
