--- a/hatch.toml
+++ b/hatch.toml
@@ -55,9 +55,9 @@ features = ["docs"]
 python = "3.12"
 
 [envs.docs.scripts]
-build = "sphinx-build -W --keep-going --color -b html docs docs/_build"
-linkcheck = "sphinx-build -W --keep-going --color -b linkcheck docs docs/_build"
-doctest = "sphinx-build -W --keep-going --color -b doctest docs docs/_build"
+build = "sphinx-build -n -T -W --keep-going --color -b html docs docs/_build/html"
+linkcheck = "sphinx-build -n -T -W --keep-going --color -b linkcheck docs docs/_build/html"
+doctest = "sphinx-build -n -T -W --keep-going --color -b doctest docs docs/_build/html"
 run = ["build", "linkcheck"]
 all = ["build", "linkcheck", "doctest"]
 
