--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,8 @@ tests = [
     "pytest>=6.0",
     "pytest-cov",
     "pytest-xdist",
+    "cattrs",
+    "packaging",
     "sympy",
     "vcrpy>=5",  # keep synchronized with docs dependencies
     "importlib_metadata>=4.6; python_version<'3.10'",
