--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ tests = [
     "pytest-xdist",
     "sympy",
     "vcrpy>=5",  # keep synchronized with docs dependencies
+    "win32-setctime",
     "importlib_metadata>=4.6; python_version<'3.10'",
 ]
 types = [
