--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,6 +166,7 @@ source = [
 source = ["src"]
 branch = true
 relative_files = true
+disable_warnings = ["module-not-measured"]
 
 
 # https://docs.astral.sh/ruff/
