--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,11 @@ repos:
         description: This hook runs doc8 for linting docs
         require_serial: true
 
+  - repo: https://github.com/woodruffw/zizmor-pre-commit
+    rev: v1.5.2
+    hooks:
+    - id: zizmor
+
   - repo: local
     hooks:
       - id: changelog-fragment-filenames
