--- a/.github/actions/prepare-tests/action.yaml
+++ b/.github/actions/prepare-tests/action.yaml
@@ -1,48 +1,46 @@
-# Download .mkv and compress them with rar to be used in tests.
+name: 'Download data for tests'
+description: 'Download .mkv and compress them with rar to be used in tests.'
 
-jobs:
-  prepare-test:
-    name: Download data for tests
-    runs-on: ubuntu-latest
+runs:
+  using: "composite"
+  steps:
+    - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
+        fetch-depth: 0
+    - name: Install other test software (on Linux only)
+      uses: awalsh128/cache-apt-pkgs-action@v1
+      with:
+        packages: rar
+        version: 1.0
+    - uses: actions/setup-python@v5
+      with:
+        python-version-file: .python-version-default
+        cache: pip
+    - name: Install dependencies
+      run: |
+        python -Im pip install --upgrade pip
+        python -Im pip install tox requests
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-          fetch-depth: 0
-      - name: Install other test software (on Linux only)
-        uses: awalsh128/cache-apt-pkgs-action@v1
-        with:
-          packages: rar
-          version: 1.0
-      - uses: actions/setup-python@v5
-        with:
-          python-version-file: .python-version-default
-          cache: pip
-      - name: Install dependencies
-        run: |
-          python -Im pip install --upgrade pip
-          python -Im pip install tox requests
+    - name: Cache test data
+      id: cache-test-data
+      uses: actions/cache@v4
+      with:
+        path: tests/data/
+        enableCrossOsArchive: true
+        key: ${{ runner.os }}-prepare-tests
 
-      - name: Cache test data
-        id: cache-test-data
-        uses: actions/cache@v4
-        with:
-          path: tests/data/
-          enableCrossOsArchive: true
-          key: ${{ runner.os }}-prepare-tests
+    - name: Download tests data
+      if: steps.cache-test-data.outputs.cache-hit != 'true'
+      run: |
+        tox -e prepare-tests
 
-      - name: Download tests data
-        if: steps.cache-test-data.outputs.cache-hit != 'true'
-        run: |
-          tox -e prepare-tests
-
-      # - name: Upload files for test
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: tests-data
-      #     path: tests/data/
-      #     include-hidden-files: false
-      #     if-no-files-found: error
-      #     # heavy artifact should be deleted asap
-      #     retention-days: 1
+    # - name: Upload files for test
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: tests-data
+    #     path: tests/data/
+    #     include-hidden-files: false
+    #     if-no-files-found: error
+    #     # heavy artifact should be deleted asap
+    #     retention-days: 1
