use cache for core-coverage

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -254,11 +254,10 @@ jobs:
         id: setup
         with:
           python-version-file: .python-version-default
-      - uses: actions/download-artifact@v4
-        with:
-          name: tests-data
-          path: tests/data/
-          merge-multiple: true
+      - name: Prepare tests
+        uses: ./.github/actions/prepare-tests
+      - name: Display downloaded files
+        run: ls -R tests/data
       - name: Install hatch
         run: python -Im pip install hatch
 
