require core-coverage

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -302,7 +302,7 @@ jobs:
 
     needs:
       - coverage
-      # - core-coverage
+      - core-coverage
       - docs
       - install-dev
       - typing
