Add release scripts, actions and documentation (#1186)
* add release scripts, actions and documentation

* github action security

* release dependencies

* add colorama to test dependencies

* gha: remove permissions

* ignore zizmor error

* fix ruff format

* update prepare-release-pr to use gh instead of github3.py

* use getzze/subliminal

* use anonymous reference for towncrier issues

* use the same python version for docs and the rest

* scripts/release.py --skip-check-docs is True by default

* do not bump version, we use hatch-vcs

* Use the type/release label for release PR

* create the type/release label before with gh

* create the type/release label before with gh, no check

* use gh pr create

* allow selecting the remote

* set git user.name and user.email only in gha

---------

Co-authored-by: subliminal bot <diaoulael@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ tests = [
     "pytest-cov",
     "pytest-xdist",
     "sympy",
+    "colorama",  # used in scripts/
     "vcrpy>=5",  # keep synchronized with docs dependencies
     "win32-setctime",
     "importlib_metadata>=4.6; python_version<'3.10'",
@@ -236,7 +237,7 @@ package = "subliminal"
 directory = "changelog.d"
 filename = "HISTORY.rst"
 title_format = "`v{version} <https://github.com/Diaoul/subliminal/tree/{version}>`_ ({project_date})"
-issue_format = "`#{issue} <https://github.com/Diaoul/subliminal/issues/{issue}>`_"
+issue_format = "`#{issue} <https://github.com/Diaoul/subliminal/issues/{issue}>`__"
 underlines = ["^", "-", "~"]
 
 [[tool.towncrier.type]]
