--- a/tox.ini
+++ b/tox.ini
@@ -99,8 +99,8 @@ setenv =
 
 
 [testenv:docs]
-# Keep base_python in-sync with check.yaml/docs and .readthedocs.yaml.
-base_python = py312
+# Keep base_python in-sync with CI.yaml/docs and .readthedocs.yaml.
+base_python = python3
 extras = docs
 allowlist_externals = sphinx-build
 commands =
@@ -113,3 +113,21 @@ commands =
 extras = docs
 allowlist_externals = towncrier
 commands = towncrier build --version main --draft
+
+[testenv:release]
+description = do a release, required posarg of the version number
+basepython = python3
+extras = docs
+usedevelop = True
+passenv = *
+deps =
+    colorama
+    tox
+commands = python scripts/release.py {posargs}
+
+[testenv:prepare-release-pr]
+description = prepare a release PR from a manual trigger in GitHub actions
+usedevelop = {[testenv:release]usedevelop}
+passenv = {[testenv:release]passenv}
+deps = {[testenv:release]deps}
+commands = python scripts/prepare-release-pr.py {posargs}
