--- a/.github/workflows/prepare-release-pr.yaml
+++ b/.github/workflows/prepare-release-pr.yaml
@@ -55,4 +55,5 @@ jobs:
       run: |
         git config user.name 'subliminal bot'
         git config user.email diaoulael@gmail.com
-        tox -e prepare-release-pr -- ${BRANCH} --bump='${BUMP}' --prerelease='${PRERELEASE}'
+        gh auth login
+        tox -e prepare-release-pr -- ${BRANCH} --bump=${BUMP} --prerelease=${PRERELEASE}
