--- a/.github/workflows/prepare-release-pr.yaml
+++ b/.github/workflows/prepare-release-pr.yaml
@@ -53,6 +53,6 @@ jobs:
         PRERELEASE: ${{ github.event.inputs.prerelease }}
         GH_TOKEN: ${{ github.token }}
       run: |
-        git config user.name 'subliminal bot'
-        git config user.email diaoulael@gmail.com
+        git config user.name 'github-actions[bot]'
+        git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
         tox -e prepare-release-pr -- ${BRANCH} --bump=${BUMP} --prerelease=${PRERELEASE}
