tag-release only if PR head is from the same repo as base

--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -60,13 +60,15 @@ jobs:
 
   tag-release:
     name: Tag a new release, from a release PR
-    # for security, the PR must be from a 'releases/*' branch AND have the 'type/release' label
-    # keep in sync with scripts/prepare-release-pr.py
+    # for security, the PR must be from a 'releases/*' branch of the same repo
+    # AND have the 'type/release' label.
+    # keep the label in sync with scripts/prepare-release-pr.py
     if: |
       github.repository == 'Diaoul/subliminal'
       && github.event_name == 'pull_request'
       && github.event.action == 'closed'
       && github.event.pull_request.merged == true
+      && github.event.pull_request.head.repo.full_name == github.repository
       && contains(github.event.pull_request.labels.*.name, 'type/release')
       && startsWith(github.head_ref, 'releases/')
     needs: [build-package]
