docs use furo theme with version selector

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ dependencies = [
 rar = ["rarfile>=2.7"]
 docs = [
     "sphinx<8.2",
-    "sphinx_rtd_theme>=2",
+    "furo",
     "sphinxcontrib-programoutput",
     "sphinx_autodoc_typehints",
     "sphinx_changelog",
